--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -30,7 +30,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>2</number>
       </property>
       <property name="tabsClosable">
        <bool>false</bool>
@@ -240,7 +240,7 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QTableWidget" name="tableWidget"/>
+           <widget class="QTableWidget" name="tblTime"/>
           </item>
           <item>
            <spacer name="verticalSpacer">
@@ -359,7 +359,7 @@
      <x>0</x>
      <y>0</y>
      <width>427</width>
-     <height>20</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
