--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>427</width>
+    <width>568</width>
     <height>401</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>568</width>
+    <height>401</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -247,10 +253,13 @@
             <property name="orientation">
              <enum>Qt::Vertical</enum>
             </property>
+            <property name="sizeType">
+             <enum>QSizePolicy::Fixed</enum>
+            </property>
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>40</height>
+              <height>10</height>
              </size>
             </property>
            </spacer>
@@ -280,9 +289,15 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton_2">
+             <widget class="QPushButton" name="btnTimeCreate">
+              <property name="minimumSize">
+               <size>
+                <width>136</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
-               <string>PushButton</string>
+               <string>Создать...</string>
               </property>
              </widget>
             </item>
@@ -303,9 +318,44 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButton">
+             <widget class="QPushButton" name="btnTimeEdit">
+              <property name="minimumSize">
+               <size>
+                <width>136</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
-               <string>PushButton</string>
+               <string>Редактировать...</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeType">
+               <enum>QSizePolicy::Fixed</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>20</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
+             <widget class="QPushButton" name="btnTimeDelete">
+              <property name="minimumSize">
+               <size>
+                <width>136</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="text">
+               <string>Удалить...</string>
               </property>
              </widget>
             </item>
@@ -335,7 +385,7 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>10</height>
+              <height>2</height>
              </size>
             </property>
            </spacer>
@@ -358,7 +408,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>427</width>
+     <width>568</width>
      <height>25</height>
     </rect>
    </property>
@@ -373,6 +423,16 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <tabstops>
+  <tabstop>btnSetTime</tabstop>
+  <tabstop>cbMonth</tabstop>
+  <tabstop>sbYear</tabstop>
+  <tabstop>tblTime</tabstop>
+  <tabstop>btnTimeCreate</tabstop>
+  <tabstop>btnTimeEdit</tabstop>
+  <tabstop>btnTimeDelete</tabstop>
+  <tabstop>tabWidget</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
