--- a/wintimeedit.ui
+++ b/wintimeedit.ui
@@ -1,9 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <author/>
- <comment/>
- <exportmacro/>
  <class>WinTimeEdit</class>
- <widget name="WinTimeEdit" class="QDialog">
+ <widget class="QDialog" name="WinTimeEdit">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -15,7 +13,10 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget name="buttonBox" class="QDialogButtonBox">
+  <property name="modal">
+   <bool>true</bool>
+  </property>
+  <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
      <x>30</x>
@@ -32,7 +33,6 @@
    </property>
   </widget>
  </widget>
- <pixmapfunction/>
  <resources/>
  <connections>
   <connection>
