--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -246,7 +246,14 @@
            <number>0</number>
           </property>
           <item>
-           <widget class="QTableWidget" name="tblTime"/>
+           <widget class="QTableWidget" name="tblTime">
+            <property name="selectionMode">
+             <enum>QAbstractItemView::SingleSelection</enum>
+            </property>
+            <property name="selectionBehavior">
+             <enum>QAbstractItemView::SelectRows</enum>
+            </property>
+           </widget>
           </item>
           <item>
            <spacer name="verticalSpacer">
@@ -434,5 +441,25 @@
   <tabstop>tabWidget</tabstop>
  </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>btnTimeDelete</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>deleteSelectedRow()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>451</x>
+     <y>362</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>5</x>
+     <y>352</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>deleteSelectedRow()</slot>
+ </slots>
 </ui>
