--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,7 +36,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <property name="tabsClosable">
        <bool>false</bool>
@@ -405,6 +405,25 @@
        <attribute name="title">
         <string>Page</string>
        </attribute>
+       <widget class="QLineEdit" name="lineEdit">
+        <property name="geometry">
+         <rect>
+          <x>100</x>
+          <y>40</y>
+          <width>111</width>
+          <height>27</height>
+         </rect>
+        </property>
+        <property name="inputMask">
+         <string>09:09</string>
+        </property>
+        <property name="text">
+         <string>:</string>
+        </property>
+        <property name="maxLength">
+         <number>5</number>
+        </property>
+       </widget>
       </widget>
      </widget>
     </item>
