--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,23 +7,23 @@
     <x>0</x>
     <y>0</y>
     <width>568</width>
-    <height>370</height>
+    <height>390</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>568</width>
-    <height>370</height>
+    <height>390</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>568</width>
-    <height>370</height>
+    <height>390</height>
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Учет времени</string>
   </property>
   <property name="tabShape">
    <enum>QTabWidget::Rounded</enum>
@@ -35,7 +35,7 @@
       <x>9</x>
       <y>9</y>
       <width>550</width>
-      <height>97</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -46,9 +46,6 @@
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
     </property>
     <widget class="QComboBox" name="cbMonth">
      <property name="geometry">
@@ -139,10 +136,10 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>30</x>
+       <x>10</x>
        <y>10</y>
        <width>91</width>
-       <height>20</height>
+       <height>14</height>
       </rect>
      </property>
      <property name="text">
@@ -230,9 +227,9 @@
     <property name="geometry">
      <rect>
       <x>9</x>
-      <y>112</y>
+      <y>102</y>
       <width>550</width>
-      <height>211</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -368,6 +365,30 @@
       </spacer>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="lblBuild">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>370</y>
+      <width>541</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+      <weight>75</weight>
+      <italic>false</italic>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
    </widget>
   </widget>
  </widget>
